--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,4 +1,4 @@
-Package: voidev
+Package: devoid
 Type: Package
 Title: A Graphic Device That Does Nothing
 Version: 0.1.0
@@ -13,12 +13,12 @@ Maintainer: Thomas Lin Pedersen <thomas.pedersen@rstudio.com>
 Description: In order to properly benchmark graphic drawing code it is necessary
     to factor out the device implemenation itself so that results are not 
     related to the specifc graphics device used during benchmarking. The 
-    'voidev' package implements a graphic device that accepts all the required
+    'devoid' package implements a graphic device that accepts all the required
     calls from R's graphic engine but performs no action. Apart from 
     benchmarking it is unlikely that this device has any practical use.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
-URL: https://github.com/r-lib/voidev
-BugReports: https://github.com/r-lib/voidev/issues
+URL: https://github.com/r-lib/devoid
+BugReports: https://github.com/r-lib/devoid/issues
