--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,3 +23,5 @@ LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/r-lib/devoid
 BugReports: https://github.com/r-lib/devoid/issues
+Suggests: 
+    covr
