--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,6 +20,8 @@ Description: Provides a non-drawing graphic device for benchmarking purpose.
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.1.1
+RoxygenNote: 7.1.0.9000
 URL: https://github.com/r-lib/devoid
 BugReports: https://github.com/r-lib/devoid/issues
+Suggests: 
+    covr
